# llm-gauntlet

./: .gitignore  LICENSE  README.md  RESULTS.md  bench_client.py  bench_new_models.py  bench_one.py  bench_orchestrator_loop.py  bench_pipeline.py  bench_scout.py  bench_tiered_scout.py  benchmarker_instructions.md  chat_template.jinja  orchestrator_judge.py  pyproject.toml  run-gauntlet.sh  run_exec_ds_flash.py  run_scout_ds.py  run_scout_ds_nothink.py  run_scout_ds_pro.py  run_scout_ds_pro_low.py  run_scout_minicpm5.py  scout_metrics.py  scout_pipeline.py  smoke.py  tiered_scout.py
.omp/agents/: capsule-scout.md  code-reviewer.md  plan.md  ponytail-reviewer.md  researcher.md  scout.md  tester.md  worker.md
.omp/skills/caveman/: README.md  SKILL.md
.omp/skills/code-review/: SKILL.md
.omp/skills/code-review/references/: aggregate-review.md  spec-reviewer.md  standards-reviewer.md
.omp/skills/grill-me/: SKILL.md
.omp/skills/grilling/: SKILL.md
.omp/skills/orchestrate-change/: SKILL.md
.omp/skills/ponytail-review/: SKILL.md
queries/: scout_gauntlet.json  scout_miss_queries.json  scout_mtplx.json  scout_mtplx_fable_misses.json  scout_prism_hard_file.json
results/: HARD_FILE_EVAL.md
scripts/: gen_prism_hard_queries.py  local_scout_cli.py  rescore_tiered_results.py  run_fable_fusion_graphify.sh  run_mtplx_27b_graphify.sh  run_prism_hard_fileonly.sh  serve.sh  supervise_bench.sh
tasks/: codeeditbench.py  corebench.py  humaneval.py  ifeval.py  repoqa.py  scout.py
